major refactor of all links
